<resources>
    <string name="app_name">Shoe Store</string>

    <!-- Login Screen -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">please enter email</string>
    <string name="enter_password">please enter password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="no_auth">Not Authorized, please try email/password again.</string>

    <!-- Welcome Screen -->
    <string name="secure_payment">Secure Payment</string>
    <string name="quality_shoes">Quality Shoes</string>
    <string name="instruction">Instruction</string>
    <string name="welcome">Welcome</string>
    <string name="cd_secure_payment">Secure Payment Image</string>

    <!-- Instruction Screen -->
    <string name="shoes"> Shoes</string>
    <string name="cancel_shoe">Cancel: if new shoe is not satisfactory, cancel to return to Shoes Inventory</string>
    <string name="save_shoe">Save: if you like new shoe, please save to add to Shoe Inventory</string>
    <string name="cd_shoe_image">Shoe Image</string>

    <!-- Shoe Screen -->
    <string name="shoe_collection">SHOE COLLECTION</string>
    <string name="add_item">Add Item</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company_name">Company Name</string>
    <string name="description">Description</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="collection_title">Shoe Collection</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="cd_add_shoe">Add Shoe Button</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

</resources>