<?xml version="1.0" encoding="utf-8"?>
<!-- ConstraintLayout: would give some performance boost with more complex layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/shoe_name" />

        <TextView
            android:id="@+id/shoe_name"
            style="@style/TextViewStyle"
            android:hint="@string/shoe_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/company_name" />

        <TextView
            android:id="@+id/company_name"
            style="@style/TextViewStyle"
            android:hint="@string/company_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/shoe_size" />

        <TextView
            android:id="@+id/shoe_size"
            style="@style/TextViewStyle"
            android:hint="@string/shoe_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/description" />

        <TextView
            android:id="@+id/shoe_description"
            style="@style/TextViewStyle"
            android:hint="@string/description" />

    </LinearLayout>

</LinearLayout>